@@ -51,7 +51,7 @@
     (let ((s (build-sphere 20 20)))
         (grab s)
         (deform (pdata-size) (flxrnd) (* (flxrnd) 10))
-        (recalc-normals)
+        (recalc-normals 1)
         (toon-light (pdata-size))
         (ungrab))
     (pop)
@@ -70,7 +70,7 @@
     (apply-transform s)
     (grab s)
     (deform-plane (pdata-size))
-    (recalc-normals)
+    (recalc-normals 1)
     (toon-light (pdata-size))
     (rotate (vector -90 0 0))
     (ungrab))
