@@ -153,7 +153,7 @@
         (let ((shape (build-polygons (* (length vertices) 3) 2))) ; make our primitive
         (grab shape)
         (make-vertices vertices 0) ; set the data
-        (recalc-normals)           
+        (recalc-normals 1)           
         (ungrab)
 		shape)))
 
